add_library(client SHARED
        ../shared/hl2mp/weapon_crossbow.cpp
        c_plasma.cpp
        ../../public/vallocator.cpp
        c_te_worlddecal.cpp
        replay/replaycamera.cpp
        clientmode_shared.cpp
        hud_crosshair.cpp
        c_func_dust.cpp
        ../shared/base_playeranimstate.cpp
        c_particle_system.cpp
        ../../public/collisionutils.cpp
        c_basecombatcharacter.cpp
        c_vote_controller.cpp
        movehelper_client.cpp
        c_func_breakablesurf.cpp
        hl2/c_strider.cpp
        recvproxy.cpp
        hl2/c_npc_manhack.cpp
        hl2/c_weapon_crossbow.cpp
        ../../public/renamed_recvtable_compat.cpp
        c_ai_basenpc.cpp
        ../shared/beam_shared.cpp
        ../../public/bone_accessor.cpp
        c_recipientfilter.cpp
        animatedentitytextureproxy.cpp
        fx_tracer.cpp
        ../shared/vehicle_viewblend_shared.cpp
        ../shared/hl2mp/weapon_crowbar.cpp
        toggletextureproxy.cpp
        hl2/fx_hl2_impacts.cpp
        C_WaterLODControl.cpp
        ../shared/hl2mp/weapon_shotgun.cpp
        c_test_proxytoggle.cpp
        hl2/c_npc_combinegunship.cpp
        hl2/c_hl2_playerlocaldata.cpp
        c_lightglow.cpp
        c_world.cpp
        ../shared/gamerules.cpp
        ViewConeImage.cpp
        ../../public/posedebugger.cpp
        game_controls/MapOverview.cpp
        ../shared/singleplay_gamerules.cpp
        vgui_centerstringpanel.cpp
        hl2/hud_blood.cpp
        ../shared/basecombatcharacter_shared.cpp
        clientsideeffects_test.cpp
        c_te_explosion.cpp
        hl2/c_env_headcrabcanister.cpp
        ../shared/particle_property.cpp
        vgui_bitmapbutton.cpp
        ../shared/script_intro_shared.cpp
        ../shared/effect_dispatch_data.cpp
        clientsteamcontext.cpp
        ../shared/hl2/hl2_gamerules.cpp
        fx_sparks.cpp
        game_controls/vguitextwindow.cpp
        ../shared/util_shared.cpp
        ../shared/weapon_parse.cpp
        proxyplayer.cpp
        c_te_largefunnel.cpp
        ../shared/hl2mp/weapon_physcannon.cpp
        physics.cpp
        ../shared/animation.cpp
        ../shared/death_pose.cpp
        menu.cpp
        c_physbox.cpp
        ../../public/tier0/memoverride.cpp
        ../shared/ammodef.cpp
        ../../public/SoundParametersInternal.cpp
        dummyproxy.cpp
        c_func_rotating.cpp
        ../shared/hl2/hl2_usermessages.cpp
        physics_main_client.cpp
        c_breakableprop.cpp
        ../shared/igamesystem.cpp
        EffectsClient.cpp
        c_func_occluder.cpp
        particles_attractor.cpp
        splinepatch.cpp
        hl2/c_script_intro.cpp
        ../shared/usercmd.cpp
        physpropclientside.cpp
        commentary_modelviewer.cpp
        view_effects.cpp
        ../shared/baseviewmodel_shared.cpp
        hl2/c_waterbullet.cpp
        view_beams.cpp
        gametrace_client.cpp
        game_controls/intromenu.cpp
        ../../public/dt_utlvector_recv.cpp
        ../../public/filesystem_helpers.cpp
        train.cpp
        ../shared/hl2/hl_gamemovement.cpp
        animatedtextureproxy.cpp
        c_te_muzzleflash.cpp
        game_controls/NavProgress.cpp
        particles_new.cpp
        c_func_areaportalwindow.cpp
        matrixproxy.cpp
        c_te_effect_dispatch.cpp
        hud_bitmapnumericdisplay.cpp
        c_particle_smokegrenade.cpp
        ../../common/compiledcaptionswap.cpp
        ../shared/SpriteTrail.cpp
        particle_simple3d.cpp
        c_physmagnet.cpp
        c_baseplayer.cpp
        lamphaloproxy.cpp
        ../shared/precache_register.cpp
        c_te_clientprojectile.cpp
        mumble.cpp
        ../../public/interpolatortypes.cpp
        c_stickybolt.cpp
        c_team_train_watcher.cpp
        c_vehicle_choreo_generic.cpp
        cliententitylist.cpp
        ../shared/teamplay_round_timer.cpp
        hl2/C_Func_Monitor.cpp
        c_env_tonemap_controller.cpp
        fx_trail.cpp
        ../../public/crtmemdebug.cpp
        c_playerresource.cpp
        functionproxy.cpp
        c_point_camera.cpp
        c_movie_explosion.cpp
        ../../public/ScratchPadUtils.cpp
        c_colorcorrectionvolume.cpp
        particles_localspace.cpp
        game_controls/basemodelpanel.cpp
        ../shared/gamevars_shared.cpp
        ../shared/voice_status.cpp
        hl2mp/hl2mp_hud_chat.cpp
        ../shared/collisionproperty.cpp
        hl2/c_env_alyxtemp.cpp
        panelmetaclassmgr.cpp
        c_team_objectiveresource.cpp
        mathproxy.cpp
        glow_overlay.cpp
        hl2/hud_filmdemo.cpp
        fx_explosion.cpp
        c_baseanimating.cpp
        warp_overlay.cpp
        c_entityparticletrail.cpp
        ../shared/teamplay_gamerules.cpp
        clienteffectprecachesystem.cpp
        flashlighteffect.cpp
        playerandobjectenumerator.cpp
        hl2/shieldproxy.cpp
        c_te_decal.cpp
        vgui_int.cpp
        c_te_showline.cpp
        game_controls/teammenu.cpp
        achievement_notification_panel.cpp
        ../shared/predictioncopy.cpp
        c_physicsprop.cpp
        mp3player.cpp
        ../shared/hl2mp/weapon_slam.cpp
        c_tesla.cpp
        c_te_beamringpoint.cpp
        ../shared/point_bonusmaps_accessor.cpp
        client_factorylist.cpp
        c_ai_basehumanoid.cpp
        hl2/hud_quickinfo.cpp
        c_team.cpp
        c_gib.cpp
        c_basetempentity.cpp
        c_te_bubbles.cpp
        c_sprite.cpp
        c_te_smoke.cpp
        hl2mp/ui/backgroundpanel.cpp
        hud_animationinfo.cpp
        hud.cpp
        viewdebug.cpp
        fx_line.cpp
        ../shared/physics_main_shared.cpp
        c_te_physicsprop.cpp
        weapon_selection.cpp
        message.cpp
        c_env_fog_controller.cpp
        fx_shelleject.cpp
        c_ragdoll_manager.cpp
        hl2/fx_hl2_tracers.cpp
        hud_redraw.cpp
        c_te_beampoints.cpp
        hud_basechat.cpp
        ../shared/hintsystem.cpp
        ../shared/SoundEmitterSystem.cpp
        c_te_bloodsprite.cpp
        ../shared/hl2/env_headcrabcanister_shared.cpp
        hl2/c_te_flare.cpp
        ScreenSpaceEffects.cpp
        c_smokestack.cpp
        particlemgr.cpp
        ../shared/usermessages.cpp
        c_te_sparks.cpp
        particles_simple.cpp
        animatedoffsettextureproxy.cpp
        in_main.cpp
        c_steamjet.cpp
        hl2/hud_health.cpp
        ../shared/hl2mp/weapon_hl2mpbase.cpp
        ../shared/baseentity_shared.cpp
        particle_proxies.cpp
        hl2/c_te_concussiveexplosion.cpp
        hl2mp/hl2mp_hud_target_id.cpp
        ../shared/physics_saverestore.cpp
        ../shared/achievementmgr.cpp
        c_te_beamentpoint.cpp
        hl2/c_npc_antlionguard.cpp
        c_spotlight_end.cpp
        hl2/hl_prediction.cpp
        c_te_projecteddecal.cpp
        ../shared/rope_helpers.cpp
        c_te_beamring.cpp
        hl2/c_basehlcombatweapon.cpp
        hl2/hl2_clientmode.cpp
        ../../public/tools/bonelist.cpp
        basepresence.cpp
        c_te_dynamiclight.cpp
        c_info_overlay_accessor.cpp
        ../../public/simple_physics.cpp
        c_te_fizz.cpp
        hl2/hud_autoaim.cpp
        ../shared/hl2mp/hl2mp_weapon_parse.cpp
        fx_discreetline.cpp
        c_func_smokevolume.cpp
        c_te_spritespray.cpp
        ../shared/debugoverlay_shared.cpp
        ../shared/hl2mp/weapon_hl2mpbase_machinegun.cpp
        particles_ez.cpp
        ../shared/gamerules_register.cpp
        ../shared/ragdoll_shared.cpp
        ../shared/hl2mp/hl2mp_gamerules.cpp
        c_te_breakmodel.cpp
        hud_squadstatus.cpp
        c_te_particlesystem.cpp
        c_baseviewmodel.cpp
        ../shared/env_detail_controller.cpp
        clientsideeffects.cpp
        viewrender.cpp
        hl2/c_vehicle_cannon.cpp
        IsNPCProxy.cpp
        hud_vehicle.cpp
        ../shared/activitylist.cpp
        c_smoke_trail.cpp
        c_rumble.cpp
        game_controls/commandmenu.cpp
        c_shadowcontrol.cpp
        vgui_bitmapimage.cpp
        vgui_video.cpp
        c_fire_smoke.cpp
        hl2/c_barnacle.cpp
        ../../public/vgui_controls/vgui_controls.cpp
        hl2mp/hl2mp_hud_team.cpp
        ../../public/client_class.cpp
        vgui_grid.cpp
        weapons_resource.cpp
        c_te_beamlaser.cpp
        ../../public/jigglebones.cpp
        c_env_projectedtexture.cpp
        cl_mat_stub.cpp
        hl2/c_func_tankmortar.cpp
        ../../public/rope_physics.cpp
        hl2/hud_hdrdemo.cpp
        texturescrollmaterialproxy.cpp
        fx.cpp
        ProxyHealth.cpp
        ../shared/gamemovement.cpp
        clientshadowmgr.cpp
        toolframework_client.cpp
        ../shared/particlesystemquery.cpp
        history_resource.cpp
        c_te_bubbletrail.cpp
        playerspawncache.cpp
        initializer.cpp
        ../../public/scratchpad3d.cpp
        hud_voicestatus.cpp
        c_sprite_perfmonitor.cpp
        c_fish.cpp
        particle_litsmokeemitter.cpp
        hl2/hud_ammo.cpp
        ../shared/point_posecontroller.cpp
        hud_lcd.cpp
        c_func_conveyor.cpp
        c_hairball.cpp
        stdafx.cpp
        c_effects.cpp
        hl2/c_ar2_explosion.cpp
        geiger.cpp
        ../shared/hl2mp/weapon_stunstick.cpp
        c_baseentity.cpp
        hl2mp/ui/hl2mptextwindow.cpp
        fx_cube.cpp
        ../shared/basegrenade_shared.cpp
        c_dynamiclight.cpp
        glow_outline_effect.cpp
        in_camera.cpp
        hud_msg.cpp
        ../shared/hl2/basehlcombatweapon_shared.cpp
        hl2mp/c_hl2mp_player.cpp
        c_te_energysplash.cpp
        baseclientrendertargets.cpp
        c_testtraceline.cpp
        ../../public/networkvar.cpp
        c_te_glassshatter.cpp
        ../shared/achievements_hlx.cpp
        hl2/hud_suitpower.cpp
        hud_numericdisplay.cpp
        c_slideshow_display.cpp
        sixense/in_sixense.cpp
        ../../public/haptics/haptic_msgs.cpp
        ../shared/EntityParticleTrail_Shared.cpp
        vgui_debugoverlaypanel.cpp
        ../shared/studio_shared.cpp
        bone_merge_cache.cpp
        particle_collision.cpp
        hl2/c_vehicle_crane.cpp
        fx_fleck.cpp
        c_pixel_visibility.cpp
        vgui_bitmappanel.cpp
        ../shared/hl2mp/weapon_frag.cpp
        hl2/c_antlion_dust.cpp
        fx_impact.cpp
        simple_keys.cpp
        c_func_lod.cpp
        replay/cdll_replay.cpp
        ../shared/sceneentity_shared.cpp
        proxyentity.cpp
        ../shared/interval.cpp
        c_te_sprite.cpp
        detailobjectsystem.cpp
        hl2/hud_flashlight.cpp
        c_te_killplayerattachments.cpp
        ../shared/soundenvelope.cpp
        ../shared/baseplayer_shared.cpp
        c_te_armorricochet.cpp
        vgui_game_viewport.cpp
        ../shared/achievement_saverestore.cpp
        studio_stats.cpp
        ../../common/language.cpp
        ../shared/baseprojectile.cpp
        c_te_bspdecal.cpp
        in_mouse.cpp
        c_te_playerdecal.cpp
        hltvcamera.cpp
        c_point_commentary_node.cpp
        WorldDimsProxy.cpp
        vgui_slideshow_display_screen.cpp
        c_te_glowsprite.cpp
        vgui_avatarimage.cpp
        in_joystick.cpp
        view_scene.cpp
        hl2/c_basehlplayer.cpp
        ../shared/particle_parse.cpp
        c_te_bloodstream.cpp
        ../shared/test_ehandle.cpp
        text_message.cpp
        ../shared/hl2mp/weapon_ar2.cpp
        c_env_screenoverlay.cpp
        hl2/hud_zoom.cpp
        hl2/hud_battery.cpp
        ../shared/ehandle.cpp
        ../../public/dt_recv.cpp
        particlesphererenderer.cpp
        ../shared/hl2mp/weapon_smg1.cpp
        hl2/c_weapon__stubs_hl2.cpp
        ../../public/bone_setup.cpp
        c_te_legacytempents.cpp
        ../shared/simtimer.cpp
        ragdoll.cpp
        hl2/hud_weaponselection.cpp
        fx_blood.cpp
        c_vguiscreen.cpp
        game_controls/baseviewport.cpp
        ../shared/hl2mp/hl2mp_player_shared.cpp
        entity_client_tools.cpp
        ../shared/hl2mp/weapon_rpg.cpp
        c_tracer.cpp
        c_particle_fire.cpp
        spritemodel.cpp
        ../shared/entitylist_base.cpp
        c_props.cpp
        ../shared/basecombatweapon_shared.cpp
        hud_element_helper.cpp
        prediction.cpp
        c_baseanimatingoverlay.cpp
        hud_weapon.cpp
        hl2/c_npc_rollermine.cpp
        cdll_util.cpp
        c_te.cpp
        hl2/c_vehicle_airboat.cpp
        vgui_fpspanel.cpp
        ../shared/func_ladder.cpp
        hud_closecaption.cpp
        c_func_reflective_glass.cpp
        client_thinklist.cpp
        ../../public/studio.cpp
        c_basedoor.cpp
        ../shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.cpp
        hl2/c_citadel_effects.cpp
        ../shared/decals.cpp
        c_te_impact.cpp
        c_baseflex.cpp
        c_entitydissolve.cpp
        game_controls/ClientScoreBoardDialog.cpp
        ../shared/GameStats.cpp
        c_env_particlescript.cpp
        ../shared/teamplayroundbased_gamerules.cpp
        hl2mp/hud_deathnotice.cpp
        ../shared/hintmessage.cpp
        c_colorcorrection.cpp
        hl2/c_prop_combine_ball.cpp
        AnimateSpecificTextureProxy.cpp
        camomaterialproxy.cpp
        game_controls/IconPanel.cpp
        ../shared/sheetsimulator.cpp
        view.cpp
        C_MaterialModifyControl.cpp
        hl2/c_env_starfield.cpp
        fx_staticline.cpp
        ../shared/sequence_Transitioner.cpp
        c_user_message_register.cpp
        c_sceneentity.cpp
        hl2/fx_bugbait.cpp
        beamdraw.cpp
        c_te_beamspline.cpp
        entityoriginmaterialproxy.cpp
        c_rope.cpp
        ../../public/stringregistry.cpp
        hl2mp/ui/hl2mpclientscoreboard.cpp
        ../shared/baseparticleentity.cpp
        fx_quad.cpp
        hl2/c_corpse.cpp
        client_virtualreality.cpp
        fx_interpvalue.cpp
        hud_hintdisplay.cpp
        interpolatedvar.cpp
        c_basecombatweapon.cpp
        hl2/c_barney.cpp
        hl2/c_info_teleporter_countdown.cpp
        hl2/fx_antlion.cpp
        vgui_messagechars.cpp
        c_soundscape.cpp
        hl2/vgui_rootpanel_hl2.cpp
        vgui_video_player.cpp
        ../shared/Sprite.cpp
        ../shared/saverestore.cpp
        hud_pdump.cpp
        colorcorrectionmgr.cpp
        fx_water.cpp
        clientleafsystem.cpp
        c_sun.cpp
        game_controls/basemodel_panel.cpp
        classmap.cpp
        WaterLODMaterialProxy.cpp
        c_vehicle_jeep.cpp
        ../shared/multiplay_gamerules.cpp
        ../shared/movevars_shared.cpp
        ../../public/sentence.cpp
        vgui_loadingdiscpanel.cpp
        ../shared/mp_shareddefs.cpp
        ../shared/gamestringpool.cpp
        fx_envelope.cpp
        c_te_beamfollow.cpp
        ../shared/takedamageinfo.cpp
        hl2/c_thumper_dust.cpp
        vgui_consolepanel.cpp
        hl2/c_rotorwash.cpp
        hl2/c_basehelicopter.cpp
        hl2/c_plasma_beam_node.cpp
        perfvisualbenchmark.cpp
        ../../common/randoverride.cpp
        c_te_footprint.cpp
        cdll_bounded_cvars.cpp
        hl2mp/c_te_hl2mp_shotgun_shot.cpp
        ../shared/eventlist.cpp
        ../shared/mapentities_shared.cpp
        game_controls/SpectatorGUI.cpp
        ../shared/env_wind_shared.cpp
        cdll_client_int.cpp
        hud_basetimer.cpp
        hl2mp/clientmode_hl2mpnormal.cpp
        vgui_netgraphpanel.cpp
        ../shared/hl2mp/weapon_pistol.cpp
        hl2/hl_in_main.cpp
        alphamaterialproxy.cpp
        c_func_tracktrain.cpp
        rendertexture.cpp
        ../shared/physics_shared.cpp
        sixense/in_sixense_gesture_bindings.cpp
        ../../public/dt_utlvector_common.cpp
        c_impact_effects.cpp
        ../shared/voice_banmgr.cpp
        ../shared/baseachievement.cpp
        vgui_basepanel.cpp
        viewangleanim.cpp
        hl2/c_vehicle_prisoner_pod.cpp
        vgui_schemevisualizer.cpp
        timematerialproxy.cpp
        ../shared/props_shared.cpp
        viewpostprocess.cpp
        hl2/hud_damageindicator.cpp
        ../shared/cam_thirdperson.cpp
        ../shared/predicted_viewmodel.cpp
        hl2/hud_poisondamageindicator.cpp
        ../shared/predictableid.cpp
        c_te_beaments.cpp
        ../shared/obstacle_pushaway.cpp
        c_te_basebeam.cpp
        ../shared/sixense/sixense_convars.cpp
        ../shared/hl2mp/weapon_hl2mpbasebasebludgeon.cpp
        baseanimatedtextureproxy.cpp
        ../shared/hl2mp/weapon_357.cpp
        hl2/hud_credits.cpp
        lampbeamproxy.cpp
        proxypupil.cpp
        c_prop_vehicle.cpp
        smoke_fog_overlay.cpp
        episodic/c_vort_charge_token.cpp
        )
target_compile_definitions(client PRIVATE
        HL2MP
        NO_STRING_T
        PROTECTED_THINGS_ENABLE
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        POSIX
        QUICKTIME_VIDEO
        strncpy=use_Q_strncpy_instead
        HL2_CLIENT_DLL
        VPC
        _OSX
        _POSIX=1
        VPCGAME=hl2mp
        PROJECTDIR=${CMAKE_SOURCE_DIR}/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        COMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        NO_HOOK_MALLOC=1
        RAD_TELEMETRY_DISABLED
        FRAME_POINTER_OMISSION_DISABLED
        SOURCE1=1
        NO_MALLOC_OVERRIDE=1
        VERSION_SAFE_STEAM_API_INTERFACES
        DEBUG
        USE_SDL
        VECTOR
        FD_SETSIZE=10240
        OSX
        CLIENT_DLL
        GNUC
        DLLNAME=client
        VPCGAMECAPS=HL2MP
        GL_GLEXT_PROTOTYPES
        _DEBUG
        _snprintf=use_Q_snprintf_instead
        )
include_directories(
        ${CMAKE_SOURCE_DIR}/game/client
        ${CMAKE_SOURCE_DIR}/common
        ${CMAKE_SOURCE_DIR}/public
        ${CMAKE_SOURCE_DIR}/public/tier0
        ${CMAKE_SOURCE_DIR}/public/tier1
        ${CMAKE_SOURCE_DIR}/thirdparty/SDL2
        ${CMAKE_SOURCE_DIR}/game/client/generated_proto_mod_hl2mp
        ${CMAKE_SOURCE_DIR}/thirdparty/protobuf-2.3.0/src
        ${CMAKE_SOURCE_DIR}/vgui2/include
        ${CMAKE_SOURCE_DIR}/vgui2/controls
        ${CMAKE_SOURCE_DIR}/game/shared
        ${CMAKE_SOURCE_DIR}/game/client/game_controls
        ${CMAKE_SOURCE_DIR}/thirdparty/sixensesdk/include
        ${CMAKE_SOURCE_DIR}/game/client/hl2mp/ui
        ${CMAKE_SOURCE_DIR}/game/client/hl2mp
        ${CMAKE_SOURCE_DIR}/game/shared/hl2mp
        ${CMAKE_SOURCE_DIR}/game/client/hl2
        ${CMAKE_SOURCE_DIR}/game/client/hl2/elements
        ${CMAKE_SOURCE_DIR}/game/shared/hl2
        ${CMAKE_SOURCE_DIR}/build/Debug/mod_hl2mp/include
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/client
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/client
)
link_directories(${CMAKE_SOURCE_DIR}/lib/public/osx32)
set(LIBS vgui2 mathlib tier1 raytrace
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/libtier0.dylib
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/libvstdlib.dylib
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/choreoobjects.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/libsteam_api.dylib
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/libcrypto.dylib
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/vtf.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/tier2.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/tier3.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/bitmap.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/particles.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/matsys_controls.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/vgui_controls.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/shaderlib.a
        ${CMAKE_SOURCE_DIR}/lib/public/osx32/dmxloader.a
        ${ICONV_LIBRARIES}
        )
target_link_libraries(client ${LIBS})