add_library(server SHARED
        ../shared/hl2mp/weapon_crossbow.cpp
        hl2/vehicle_crane.cpp
        nav_ladder.cpp
        h_ai.cpp
        hl2/grenade_pathfollower.cpp
        physics_bone_follower.cpp
        weapon_cubemap.cpp
        hierarchy.cpp
        ../shared/base_playeranimstate.cpp
        toolframework_server.cpp
        ../../public/collisionutils.cpp
        hl2/func_tank.cpp
        test_stressentities.cpp
        entity_tools_server.cpp
        hl2/npc_apcdriver.cpp
        saverestore_gamedll.cpp
        te_glowsprite.cpp
        playerinfomanager.cpp
        hl2/cbasespriteprojectile.cpp
        trains.cpp
        hl2/npc_combinedropship.cpp
        doors.cpp
        hl2mp/grenade_tripmine.cpp
        ai_network.cpp
        ../shared/beam_shared.cpp
        EffectsServer.cpp
        weight_button.cpp
        ../shared/vehicle_viewblend_shared.cpp
        ../shared/hl2mp/weapon_crowbar.cpp
        hl2/npc_bullseye.cpp
        hl2/env_starfield.cpp
        ../shared/hl2/env_headcrabcanister_shared.cpp
        ai_behavior_fear.cpp
        EnvShake.cpp
        sun.cpp
        rope.cpp
        triggers.cpp
        hl2/basehlcombatweapon.cpp
        serverbenchmark_base.cpp
        hl2/npc_launcher.cpp
        hl2/hl_playermove.cpp
        ../../public/dt_utlvector_send.cpp
        hl2/point_apc_controller.cpp
        ../shared/singleplay_gamerules.cpp
        logicentities.cpp
        ../shared/basecombatcharacter_shared.cpp
        te_beampoints.cpp
        baseflex.cpp
        sceneentity.cpp
        tactical_mission.cpp
        ../shared/script_intro_shared.cpp
        ../shared/effect_dispatch_data.cpp
        util.cpp
        te_bspdecal.cpp
        EnvFade.cpp
        hl2/npc_combine.cpp
        ../shared/hl2/hl2_gamerules.cpp
        hl2/npc_monk.cpp
        AI_Criteria.cpp
        hl2/npc_zombie.cpp
        ../shared/weapon_parse.cpp
        game_ui.cpp
        ai_behavior_lead.cpp
        EntityDissolve.cpp
        ../shared/hl2mp/weapon_physcannon.cpp
        env_entity_maker.cpp
        physics_main.cpp
        ../shared/animation.cpp
        ../shared/death_pose.cpp
        hl2/npc_alyx.cpp
        recipientfilter.cpp
        ../../public/tier0/memoverride.cpp
        te_sprite.cpp
        hl2/npc_turret_floor.cpp
        ../shared/ammodef.cpp
        effects.cpp
        ../../public/SoundParametersInternal.cpp
        ai_basenpc.cpp
        EnvSpark.cpp
        ai_blended_movement.cpp
        ../shared/hl2/hl2_usermessages.cpp
        ../shared/igamesystem.cpp
        func_areaportal.cpp
        phys_controller.cpp
        entitylist.cpp
        ../shared/usercmd.cpp
        smokestack.cpp
        EntityFlame.cpp
        hl2/npc_gman.cpp
        ../shared/baseviewmodel_shared.cpp
        player_command.cpp
        ai_planesolver.cpp
        baseviewmodel.cpp
        hl2/script_intro.cpp
        ai_behavior_rappel.cpp
        te_beamspline.cpp
        TemplateEntities.cpp
        ../../public/filesystem_helpers.cpp
        lightglow.cpp
        ../shared/hl2/hl_gamemovement.cpp
        world.cpp
        physics_cannister.cpp
        hl2/npc_headcrab.cpp
        player_lagcompensation.cpp
        ../shared/achievementmgr.cpp
        basegrenade_concussion.cpp
        ai_senses.cpp
        ../shared/util_shared.cpp
        hl2/antlion_dust.cpp
        ../shared/SpriteTrail.cpp
        hl2/npc_cranedriver.cpp
        hl2/weapon_cguard.cpp
        ../shared/precache_register.cpp
        plasma.cpp
        ragdoll_manager.cpp
        ../shared/teamplay_round_timer.cpp
        ai_link.cpp
        ../shared/activitylist.cpp
        ai_saverestore.cpp
        basecombatweapon.cpp
        ../shared/gamevars_shared.cpp
        te_particlesystem.cpp
        nav_simplify.cpp
        sprite_perfmonitor.cpp
        ../shared/collisionproperty.cpp
        hl2/hl2_triggers.cpp
        hl2/vehicle_airboat.cpp
        ai_scriptconditions.cpp
        te_beamringpoint.cpp
        point_playermoveconstraint.cpp
        hl2/te_gaussexplosion.cpp
        te_beamfollow.cpp
        te_smoke.cpp
        message_entity.cpp
        soundent.cpp
        genericactor.cpp
        ai_movesolver.cpp
        te_bubbles.cpp
        hl2mp/te_hl2mp_shotgun_shot.cpp
        te_bubbletrail.cpp
        ai_navigator.cpp
        te_impact.cpp
        te_armorricochet.cpp
        hl2/hl2_ai_network.cpp
        basemultiplayerplayer.cpp
        EnvLaser.cpp
        hl2/grenade_beam.cpp
        timedeventmgr.cpp
        te_largefunnel.cpp
        ../shared/hl2mp/weapon_slam.cpp
        baseentity.cpp
        plugin_check.cpp
        ../shared/point_bonusmaps_accessor.cpp
        env_screenoverlay.cpp
        test_proxytoggle.cpp
        te_physicsprop.cpp
        te_footprintdecal.cpp
        ../../public/map_utils.cpp
        hl2/npc_enemyfinder.cpp
        props.cpp
        soundscape.cpp
        hl2/ai_spotlight.cpp
        hl2/npc_antlion.cpp
        ../shared/baseachievement.cpp
        team_objectiveresource.cpp
        mapentities.cpp
        pathcorner.cpp
        hl2/npc_stalker.cpp
        hl2/vehicle_viewcontroller.cpp
        ../shared/physics_main_shared.cpp
        hl2/prop_combine_ball.cpp
        envmicrophone.cpp
        point_template.cpp
        hl2/npc_eli.cpp
        func_areaportalwindow.cpp
        te_spritespray.cpp
        hl2/npc_barney.cpp
        hl2mp/hl2mp_client.cpp
        ../../public/scratchpad3d.cpp
        hl2/npc_combinecamera.cpp
        ../shared/hintsystem.cpp
        te_dynamiclight.cpp
        ../../public/keyframe/keyframe.cpp
        ../shared/hl2mp/weapon_shotgun.cpp
        controlentities.cpp
        ../shared/baseplayer_shared.cpp
        ai_squadslot.cpp
        gib.cpp
        hl2mp/hl2mp_bot_temp.cpp
        hl2/info_teleporter_countdown.cpp
        hl2/npc_basescanner.cpp
        func_lod.cpp
        ai_basenpc_movement.cpp
        hl2/npc_metropolice.cpp
        hl2/item_healthkit.cpp
        CRagdollMagnet.cpp
        ai_activity.cpp
        ServerNetworkProperty.cpp
        ../../public/simple_physics.cpp
        ai_squad.cpp
        bmodels.cpp
        ai_behavior_assault.cpp
        basegrenade_contact.cpp
        ../shared/usermessages.cpp
        ../shared/gamerules.cpp
        testtraceline.cpp
        ../shared/hl2mp/weapon_hl2mpbase.cpp
        scriptedtarget.cpp
        tesla.cpp
        ../shared/baseentity_shared.cpp
        gameweaponmanager.cpp
        ../shared/physics_saverestore.cpp
        ai_basenpc_flyer.cpp
        variant_t.cpp
        nav_edit.cpp
        hl2/item_dynamic_resupply.cpp
        hl2/cbasehelicopter.cpp
        ../../public/interpolatortypes.cpp
        hl2/npc_breen.cpp
        entityblocker.cpp
        nav_entities.cpp
        logicauto.cpp
        te_beamentpoint.cpp
        func_break.cpp
        hl2/npc_kleiner.cpp
        hl2/func_recharge.cpp
        te_bloodsprite.cpp
        waterbullet.cpp
        env_particlescript.cpp
        ../shared/hl2mp/hl2mp_weapon_parse.cpp
        te_beaments.cpp
        hl2/npc_manhack.cpp
        AI_Interest_Target.cpp
        nav_node.cpp
        ../shared/debugoverlay_shared.cpp
        player.cpp
        basebludgeonweapon.cpp
        SkyCamera.cpp
        colorcorrection.cpp
        ../shared/gamerules_register.cpp
        hl2/weapon_annabelle.cpp
        globals.cpp
        trigger_area_capture.cpp
        hl2/hl2_player.cpp
        ../shared/ragdoll_shared.cpp
        team_control_point.cpp
        player_resource.cpp
        vote_controller.cpp
        hl2/vehicle_apc.cpp
        shadowcontrol.cpp
        hl2/grenade_homer.cpp
        ../shared/mp_shareddefs.cpp
        func_dust.cpp
        scratchpad_gamedll_helpers.cpp
        grenadethrown.cpp
        ndebugoverlay.cpp
        fourwheelvehiclephysics.cpp
        hl2/monster_dummy.cpp
        ../shared/env_detail_controller.cpp
        ai_trackpather.cpp
        nav_area.cpp
        te_effect_dispatch.cpp
        colorcorrectionvolume.cpp
        func_ladder_endpoint.cpp
        bitstring.cpp
        te_muzzleflash.cpp
        smoke_trail.cpp
        ai_goalentity.cpp
        pointteleport.cpp
        hl2/ar2_explosion.cpp
        hl2mp/hl2mp_gameinterface.cpp
        hl2mp/hl2mp_player.cpp
        ai_dynamiclink.cpp
        hl2/antlion_maker.cpp
        ../shared/teamplayroundbased_gamerules.cpp
        hl2/npc_dog.cpp
        hl2/prop_thumper.cpp
        hl2/npc_antlionguard.cpp
        vehicle_base.cpp
        ../shared/ModelSoundsCache.cpp
        hl2/ai_allymanager.cpp
        basegrenade_timed.cpp
        guntarget.cpp
        hl2/weapon_flaregun.cpp
        hltvdirector.cpp
        te_basebeam.cpp
        intermission.cpp
        hl2/vehicle_prisoner_pod.cpp
        cplane.cpp
        hl2/grenade_bugbait.cpp
        physics_impact_damage.cpp
        hl2/npc_PoisonZombie.cpp
        AI_ResponseSystem.cpp
        vguiscreen.cpp
        maprules.cpp
        textstatsmgr.cpp
        ../../public/rope_physics.cpp
        ../shared/SceneCache.cpp
        ai_localnavigator.cpp
        subs.cpp
        func_reflective_glass.cpp
        ../shared/gamemovement.cpp
        te_beamring.cpp
        func_breakablesurf.cpp
        hl2/npc_combinegunship.cpp
        monstermaker.cpp
        ../shared/particlesystemquery.cpp
        ai_node.cpp
        BaseAnimatingOverlay.cpp
        hl2/ai_behavior_actbusy.cpp
        ai_behavior.cpp
        te_playerdecal.cpp
        genericmonster.cpp
        ai_relationship.cpp
        fire_smoke.cpp
        hl2/weapon_bugbait.cpp
        hl2/npc_combines.cpp
        ../shared/hl2mp/weapon_rpg.cpp
        ai_hint.cpp
        ../shared/hl2mp/hl2mp_gamerules.cpp
        ../shared/point_posecontroller.cpp
        env_projectedtexture.cpp
        player_pickup.cpp
        hl2/npc_fisherman.cpp
        te_projecteddecal.cpp
        physics_prop_ragdoll.cpp
        scripted.cpp
        ../shared/obstacle_pushaway.cpp
        hl2/env_headcrabcanister.cpp
        nav_generate.cpp
        ../shared/hl2mp/weapon_stunstick.cpp
        fogcontroller.cpp
        ../shared/basegrenade_shared.cpp
        ../../public/server_class.cpp
        ai_concommands.cpp
        gamedll_replay.cpp
        client.cpp
        hl2/grenade_ar2.cpp
        team_train_watcher.cpp
        hl2/ai_goal_police.cpp
        EnvBeam.cpp
        ai_motor.cpp
        ../shared/hl2/basehlcombatweapon_shared.cpp
        init_factory.cpp
        ai_basenpc_physicsflyer.cpp
        physics_npc_solver.cpp
        pointhurt.cpp
        ../../public/networkvar.cpp
        hl2mp/grenade_satchel.cpp
        ../shared/achievements_hlx.cpp
        lights.cpp
        hl2/hl2_playerlocaldata.cpp
        ../shared/hl2mp/weapon_hl2mpbase_machinegun.cpp
        hl2/Func_Monitor.cpp
        te_sparks.cpp
        ../../public/haptics/haptic_msgs.cpp
        item_world.cpp
        ../shared/EntityParticleTrail_Shared.cpp
        te_bloodstream.cpp
        ../shared/studio_shared.cpp
        info_camera_link.cpp
        ../shared/weapon_proficiency.cpp
        hl2/npc_strider.cpp
        ../shared/hl2mp/weapon_frag.cpp
        fish.cpp
        h_cycler.cpp
        info_overlay_accessor.cpp
        hl2/look_door.cpp
        physics.cpp
        ../shared/sceneentity_shared.cpp
        filters.cpp
        ../shared/interval.cpp
        cbase.cpp
        ai_behavior_standoff.cpp
        vehicle_baseserver.cpp
        steamjet.cpp
        ai_route.cpp
        explode.cpp
        ../shared/soundenvelope.cpp
        ai_hull.cpp
        ai_sentence.cpp
        ai_waypoint.cpp
        func_smokevolume.cpp
        ../shared/achievement_saverestore.cpp
        ../../common/language.cpp
        globalstate.cpp
        ../shared/baseprojectile.cpp
        movement.cpp
        ai_pathfinder.cpp
        ../../common/randoverride.cpp
        hl2/ai_behavior_functank.cpp
        game.cpp
        ../../public/editor_sendcommand.cpp
        hl2/ai_behavior_holster.cpp
        ../shared/hl2/survival_gamerules.cpp
        hl2/grenade_frag.cpp
        ../shared/particle_parse.cpp
        nav_colors.cpp
        hl2/item_suit.cpp
        hl2/npc_playercompanion.cpp
        physics_fx.cpp
        ../shared/test_ehandle.cpp
        ../shared/hl2mp/weapon_ar2.cpp
        hl2mp/hl2mp_cvars.cpp
        hl2/ai_behavior_police.cpp
        ai_behavior_follow.cpp
        ../shared/ehandle.cpp
        physconstraint.cpp
        te_breakmodel.cpp
        ai_looktarget.cpp
        npc_talker.cpp
        ../shared/hl2mp/weapon_smg1.cpp
        physobj.cpp
        stdafx.cpp
        soundscape_system.cpp
        ../../public/bone_setup.cpp
        team_control_point_round.cpp
        sound.cpp
        ../shared/simtimer.cpp
        point_spotlight.cpp
        point_camera.cpp
        hl2/item_battery.cpp
        npc_vehicledriver.cpp
        ../shared/hl2mp/hl2mp_player_shared.cpp
        spotlightend.cpp
        pathtrack.cpp
        EnvMessage.cpp
        ai_default.cpp
        te_energysplash.cpp
        gamehandle.cpp
        ../../public/registry.cpp
        te_clientprojectile.cpp
        ../shared/entitylist_base.cpp
        GameStats_BasicStatsFunctions.cpp
        nav_mesh.cpp
        ../shared/basecombatweapon_shared.cpp
        particle_system.cpp
        basecombatcharacter.cpp
        hl2/env_alyxemp.cpp
        particle_light.cpp
        point_devshot_camera.cpp
        modelentities.cpp
        ../shared/func_ladder.cpp
        h_export.cpp
        ../../public/studio.cpp
        ../shared/hl2mp/weapon_hl2mpbasehlmpcombatweapon.cpp
        ../shared/decals.cpp
        dynamiclight.cpp
        env_texturetoggle.cpp
        ai_memory.cpp
        ../shared/GameStats.cpp
        nav_merge.cpp
        CommentarySystem.cpp
        ../shared/sheetsimulator.cpp
        ai_utils.cpp
        RagdollBoogie.cpp
        hl2/npc_turret_ground.cpp
        team.cpp
        basetempentity.cpp
        ai_moveshoot.cpp
        func_occluder.cpp
        func_areaportalbase.cpp
        hl2/npc_attackchopper.cpp
        ../shared/physics_shared.cpp
        te.cpp
        ../shared/rope_helpers.cpp
        ../shared/sequence_Transitioner.cpp
        hl2/rotorwash.cpp
        te_glassshatter.cpp
        ../../public/stringregistry.cpp
        ai_tacticalservices.cpp
        ai_networkmanager.cpp
        ai_moveprobe.cpp
        hl2/citadel_effects.cpp
        tempmonster.cpp
        te_beamlaser.cpp
        ../shared/baseparticleentity.cpp
        ai_basenpc_flyer_new.cpp
        damagemodifier.cpp
        ai_namespaces.cpp
        hl2/proto_sniper.cpp
        ../shared/SoundEmitterSystem.cpp
        EventLog.cpp
        ../shared/hintmessage.cpp
        nav_mesh_factory.cpp
        slideshow_display.cpp
        ../shared/teamplay_gamerules.cpp
        team_control_point_master.cpp
        ../shared/Sprite.cpp
        hl2/npc_turret_ceiling.cpp
        ../shared/saverestore.cpp
        logic_measure_movement.cpp
        ../../public/ScratchPadUtils.cpp
        nav_file.cpp
        pointanglesensor.cpp
        env_effectsscript.cpp
        hl2/npc_missiledefense.cpp
        ../shared/hl2mp/weapon_pistol.cpp
        EntityParticleTrail.cpp
        hl2/npc_BaseZombie.cpp
        gametrace_dll.cpp
        sendproxy.cpp
        ../shared/multiplay_gamerules.cpp
        EnvHudHint.cpp
        ../shared/voice_gamemgr.cpp
        gameinterface.cpp
        ../shared/movevars_shared.cpp
        ai_basenpc_schedule.cpp
        hl2/npc_citizen17.cpp
        ../shared/gamestringpool.cpp
        base_transmit_proxy.cpp
        playerlocaldata.cpp
        ../shared/takedamageinfo.cpp
        ai_baseactor.cpp
        ../shared/querycache.cpp
        buttons.cpp
        fire.cpp
        hl2/npc_mossman.cpp
        baseanimating.cpp
        ai_speechfilter.cpp
        tanktrain.cpp
        ../shared/eventlist.cpp
        team_spawnpoint.cpp
        ai_speech.cpp
        ../shared/mapentities_shared.cpp
        hl2/npc_vortigaunt_episodic.cpp
        event_tempentity_tester.cpp
        ai_event.cpp
        hl2/npc_barnacle.cpp
        ../shared/env_wind_shared.cpp
        te_showline.cpp
        hl2/npc_rollermine.cpp
        hl2/env_speaker.cpp
        hl2/npc_scanner.cpp
        WaterLODControl.cpp
        hl2/item_itemcrate.cpp
        ai_playerally.cpp
        testfunctions.cpp
        logicrelay.cpp
        ../../public/dt_utlvector_common.cpp
        hl2/hl2_eventlog.cpp
        particle_fire.cpp
        hl2/npc_crow.cpp
        env_debughistory.cpp
        ../../public/dt_send.cpp
        env_tonemap_controller.cpp
        ai_task.cpp
        particle_smokegrenade.cpp
        hl2/npc_ichthyosaur.cpp
        PointAngularVelocitySensor.cpp
        te_killplayerattachments.cpp
        te_worlddecal.cpp
        te_fizz.cpp
        MaterialModifyControl.cpp
        ../shared/props_shared.cpp
        hl2/combine_mine.cpp
        ai_condition.cpp
        ../shared/predicted_viewmodel.cpp
        ai_initutils.cpp
        ../shared/predictableid.cpp
        ai_basehumanoid.cpp
        ../shared/hl2mp/weapon_hl2mpbasebasebludgeon.cpp
        logic_navigation.cpp
        ai_basenpc_squad.cpp
        env_zoom.cpp
        ../shared/hl2mp/weapon_357.cpp
        ai_schedule.cpp
        env_player_surface_trigger.cpp
        te_explosion.cpp
        wcedit.cpp
        hl2/item_ammo.cpp
        func_movelinear.cpp
        movie_explosion.cpp
        te_decal.cpp
        movehelper_server.cpp
        )
target_compile_definitions(server PRIVATE
        HL2MP
        PROTECTED_THINGS_ENABLE
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        POSIX
        QUICKTIME_VIDEO
        GAME_DLL
        strncpy=use_Q_strncpy_instead
        VPC
        _OSX
        _POSIX=1
        DEBUG
        VPCGAME=hl2mp
        sprintf=use_Q_snprintf_instead_of_sprintf
        PROJECTDIR=${CMAKE_SOURCE_DIR}/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        COMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        NO_HOOK_MALLOC=1
        RAD_TELEMETRY_DISABLED
        USE_NAV_MESH
        FRAME_POINTER_OMISSION_DISABLED
        SOURCE1=1
        NO_MALLOC_OVERRIDE=1
        VERSION_SAFE_STEAM_API_INTERFACES
        SWDS
        HL2_DLL
        USE_SDL
        VECTOR
        FD_SETSIZE=10240
        OSX
        DLLNAME=server
        _DEBUG
        _snprintf=use_Q_snprintf_instead
        GNUC
        VPCGAMECAPS=HL2MP
        GL_GLEXT_PROTOTYPES
        )
target_include_directories(server PRIVATE
        ${CMAKE_SOURCE_DIR}/common
        ${CMAKE_SOURCE_DIR}/public
        ${CMAKE_SOURCE_DIR}/public/tier0
        ${CMAKE_SOURCE_DIR}/public/tier1
        ${CMAKE_SOURCE_DIR}/thirdparty/SDL2
        ${CMAKE_SOURCE_DIR}/game/server/generated_proto_mod_hl2mp
        ${CMAKE_SOURCE_DIR}/thirdparty/protobuf-2.3.0/src
        ${CMAKE_SOURCE_DIR}/game/server
        ${CMAKE_SOURCE_DIR}/game/shared
        ${CMAKE_SOURCE_DIR}/utils/common
        ${CMAKE_SOURCE_DIR}/game/shared/econ
        ${CMAKE_SOURCE_DIR}/game/server/NextBot
        ${CMAKE_SOURCE_DIR}/game/shared/hl2
        ${CMAKE_SOURCE_DIR}/game/server/hl2
        ${CMAKE_SOURCE_DIR}/game/server/hl2mp
        ${CMAKE_SOURCE_DIR}/game/shared/hl2mp
        ${CMAKE_SOURCE_DIR}/build/Debug/mod_hl2mp/include
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/server
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/server
        )
target_include_directories(server SYSTEM PRIVATE
        )